Translations udaptes - de id ja nb pl zh_CN
(Old svn revision: 29472)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,10 @@
+2009-02-07  Maximilian Schleiss <maximilian@xfce.org>
+
+	* id.po: Indonesian translation update (Andhika Padmawan)
+	* nb.po: Norwegian Bokmål translation updated (Terje Uriansrud)
+	* pl.po: Polish translation update (Piotr Sokół)
+	* zh_CN: Simplified Chinese translation update (Chris K. Zhang)
+
 2009-02-03  Maximilian Schleiss <maximilian@xfce.org>
 
 	* en_GB.po: British English translation update (Jeff Bailes)
