--- a/po/nb_NO.po
+++ b/po/nb_NO.po
@@ -105,7 +105,7 @@ msgstr "Utvikler"
 
 #: ../panel/main.c:60
 msgid "Print version information and exit"
-msgstr ""
+msgstr "Skriv ut versjonsinformasjon og avslutt"
 
 #: ../panel/main.c:61
 msgid "Show 'Customize Panel' dialog"
@@ -288,7 +288,7 @@ msgstr "Panel %d"
 #. TRANSLATORS: Tooltip for the add button in the customize panel dialog
 #: ../panel/panel-dialogs.c:1594
 msgid "Remove the currently selected panel"
-msgstr ""
+msgstr "Fjern det valgte panelet"
 
 #. TRANSLATORS: Tooltip for the add button in the customize panel dialog
 #: ../panel/panel-dialogs.c:1608
@@ -758,11 +758,11 @@ msgstr "Område som viser beskjedikoner"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Switch between open windows using buttons"
-msgstr ""
+msgstr "Skifte mellom åpne vinduer med taster"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Switch between open windows using a menu"
-msgstr ""
+msgstr "Skifte mellom åpne vinduer ved å bruke en meny"
 
 #: ../settings/xfce4-panel-manager.desktop.in.h:3
 msgid "Panel Manager"
