--- a/po/id.po
+++ b/po/id.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-25 23:16+0100\n"
-"PO-Revision-Date: 2008-10-11 19:56+0700\n"
+"PO-Revision-Date: 2009-01-27 22:49+0700\n"
 "Last-Translator: Andhika Padmawan <andhika.padmawan@gmail.com>\n"
 "Language-Team: Indonesian <id@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -28,8 +28,7 @@ msgid "Remove \"%s\"?"
 msgstr "Hapus \"%s\"?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:620
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr "Item akan dihapus dari panel dan konfigurasinya akan hilang."
 
 #. TRANSLATORS: Properties menu item in the right-click plugin menu
@@ -53,19 +52,21 @@ msgid "Remove"
 msgstr "Hapus"
 
 #. TRANSLATORS: Add menu item in the right-click plugin menu
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:903 ../panel/panel.c:606
-#, fuzzy
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:903
+#: ../panel/panel.c:606
 msgid "Add New Items..."
-msgstr "Tambah Item Baru"
+msgstr "Tambah Item Baru..."
 
 #. TRANSLATORS: Customize menu item in the right-click plugin menu
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:915 ../panel/panel.c:595
-#, fuzzy
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:915
+#: ../panel/panel.c:595
 msgid "Customize Panel..."
-msgstr "Kustomisasi Panel"
+msgstr "Kustomisasi Panel..."
 
-#: ../panel/panel.c:621 ../plugins/actions/actions.c:284
-#: ../plugins/actions/actions.c:318 ../plugins/actions/actions.c:455
+#: ../panel/panel.c:621
+#: ../plugins/actions/actions.c:284
+#: ../plugins/actions/actions.c:318
+#: ../plugins/actions/actions.c:455
 msgid "Quit"
 msgstr "Keluar"
 
@@ -77,11 +78,14 @@ msgstr "Start Ulang"
 msgid "About the Xfce Panel"
 msgstr "Tentang Panel Xfce"
 
-#: ../panel/panel-app.c:259 ../panel/panel-app.c:902
+#: ../panel/panel-app.c:259
+#: ../panel/panel-app.c:902
 msgid "Exit Xfce Panel?"
 msgstr "Keluar Panel Xfce?"
 
-#: ../panel/panel-app.c:900 ../panel/panel-app.c:932 ../panel/panel-app.c:965
+#: ../panel/panel-app.c:900
+#: ../panel/panel-app.c:932
+#: ../panel/panel-app.c:965
 msgid "Xfce Panel"
 msgstr "Panel Xfce"
 
@@ -99,42 +103,38 @@ msgid "The selected panel and all its items will be removed."
 msgstr "Panel terpilih dan seluruh itemnya akan dihapus."
 
 #. TRANSLATORS: Used in the credits tab in the panel's about dialog
-#: ../panel/panel-app.c:972 ../panel/panel-app.c:973
+#: ../panel/panel-app.c:972
+#: ../panel/panel-app.c:973
 msgid "Developer"
 msgstr "Pengembang"
 
 #: ../panel/main.c:60
 msgid "Print version information and exit"
-msgstr ""
+msgstr "Cetak informasi versi lalu keluar"
 
 #: ../panel/main.c:61
-#, fuzzy
 msgid "Show 'Customize Panel' dialog"
-msgstr "Kustomisasi Panel"
+msgstr "Tampilkan dialog 'Kustomisasi Panel'"
 
 #: ../panel/main.c:62
-#, fuzzy
 msgid "Save the panel configuration"
-msgstr "Simpan konfigurasi"
+msgstr "Simpan konfigurasi panel"
 
 #: ../panel/main.c:63
-#, fuzzy
 msgid "Restart the running instance of xfce4-panel"
-msgstr "Start ulang xfce4-panel..."
+msgstr "Start ulang instansi dari xfce4-panel"
 
 #: ../panel/main.c:64
-#, fuzzy
 msgid "Log out the active session"
-msgstr "Log keluar atau kunci layar"
+msgstr "Log keluar sesi aktif"
 
 #: ../panel/main.c:65
 msgid "Close all panels and end the program"
 msgstr "Tutup semua panel dan akhiri program"
 
 #: ../panel/main.c:66
-#, fuzzy
 msgid "Show 'Add New Items' dialog"
-msgstr "Tambah Item Baru"
+msgstr "Tampilkan dialog 'Tambah Item Baru'"
 
 #. TRANSLATORS: Errors when gtk_init failed, probably the command
 #. executed without xserver running
@@ -153,9 +153,8 @@ msgid "Please report bugs to <%s>."
 msgstr "Silakan laporkan kutu ke <%s>."
 
 #: ../panel/main.c:151
-#, fuzzy
 msgid "Xfce4-panel already running"
-msgstr "xfce4-panel telah berjalan"
+msgstr "Xfce4-panel telah berjalan"
 
 #: ../panel/main.c:162
 msgid "Restarting xfce4-panel..."
@@ -168,61 +167,68 @@ msgid "Could not open \"%s\" module"
 msgstr "Tak dapat membuka modul \"%s\""
 
 #: ../panel/panel-dialogs.c:611
-#, fuzzy
 msgid "Add New Items"
 msgstr "Tambah Item Baru"
 
 #. TRANSLATORS: Make sure this string is equally spread in the add items dialog,
 #. since gtk labels do not update text wrapping on a dialog resize.
 #: ../panel/panel-dialogs.c:642
-#, fuzzy
 msgid ""
 "Drag items from the list to a panel or remove\n"
 "them by dragging them back to the list."
 msgstr ""
-"Tarik item dari senarai ke panel atau hapus dengan cara menariknya kembali "
-"ke senarai."
+"Tarik item dari senarai ke panel atau hapus\n"
+"dengan cara menariknya kembali ke senarai."
 
 #: ../panel/panel-dialogs.c:653
 msgid "_Search:"
-msgstr ""
+msgstr "Te_lusuri:"
 
-#: ../panel/panel-dialogs.c:881 ../panel/panel-dialogs.c:1117
+#: ../panel/panel-dialogs.c:881
+#: ../panel/panel-dialogs.c:1117
 msgid "Normal Width"
 msgstr "Lebar Normal"
 
-#: ../panel/panel-dialogs.c:882 ../panel/panel-dialogs.c:1118
+#: ../panel/panel-dialogs.c:882
+#: ../panel/panel-dialogs.c:1118
 msgid "Full Width"
 msgstr "Lebar Penuh"
 
-#: ../panel/panel-dialogs.c:886 ../panel/panel-dialogs.c:1122
+#: ../panel/panel-dialogs.c:886
+#: ../panel/panel-dialogs.c:1122
 msgid "Normal Height"
 msgstr "Tinggi Normal"
 
-#: ../panel/panel-dialogs.c:887 ../panel/panel-dialogs.c:1123
+#: ../panel/panel-dialogs.c:887
+#: ../panel/panel-dialogs.c:1123
 msgid "Full Height"
 msgstr "Tinggi Penuh"
 
-#: ../panel/panel-dialogs.c:895 ../panel/panel-dialogs.c:1132
+#: ../panel/panel-dialogs.c:895
+#: ../panel/panel-dialogs.c:1132
 msgid "Span Monitors"
 msgstr "Rentangkan Monitor"
 
-#: ../panel/panel-dialogs.c:958 ../panel/panel-dialogs.c:1197
+#: ../panel/panel-dialogs.c:958
+#: ../panel/panel-dialogs.c:1197
 #: ../plugins/launcher/launcher-dialog.c:1558
 msgid "Left"
 msgstr "Kiri"
 
-#: ../panel/panel-dialogs.c:960 ../panel/panel-dialogs.c:1199
+#: ../panel/panel-dialogs.c:960
+#: ../panel/panel-dialogs.c:1199
 #: ../plugins/launcher/launcher-dialog.c:1559
 msgid "Right"
 msgstr "Kanan"
 
-#: ../panel/panel-dialogs.c:965 ../panel/panel-dialogs.c:1204
+#: ../panel/panel-dialogs.c:965
+#: ../panel/panel-dialogs.c:1204
 #: ../plugins/launcher/launcher-dialog.c:1560
 msgid "Top"
 msgstr "Atas"
 
-#: ../panel/panel-dialogs.c:967 ../panel/panel-dialogs.c:1206
+#: ../panel/panel-dialogs.c:967
+#: ../panel/panel-dialogs.c:1206
 #: ../plugins/launcher/launcher-dialog.c:1561
 msgid "Bottom"
 msgstr "Bawah"
@@ -233,14 +239,12 @@ msgid "Position"
 msgstr "Posisi"
 
 #: ../panel/panel-dialogs.c:1011
-#, fuzzy
 msgid "_Fixed position"
-msgstr "Posisi Tetap"
+msgstr "_Posisi Tetap"
 
 #: ../panel/panel-dialogs.c:1017
-#, fuzzy
 msgid "Freely _moveable"
-msgstr "Bebas Bergerak"
+msgstr "Bebas _bergerak"
 
 #: ../panel/panel-dialogs.c:1140
 msgid "Auto_hide"
@@ -250,11 +254,13 @@ msgstr "Otomatis _sembunyi"
 msgid "Orientation:"
 msgstr "Orientasi:"
 
-#: ../panel/panel-dialogs.c:1170 ../plugins/actions/actions.c:482
+#: ../panel/panel-dialogs.c:1170
+#: ../plugins/actions/actions.c:482
 msgid "Horizontal"
 msgstr "Horizontal"
 
-#: ../panel/panel-dialogs.c:1172 ../plugins/actions/actions.c:483
+#: ../panel/panel-dialogs.c:1172
+#: ../plugins/actions/actions.c:483
 msgid "Vertical"
 msgstr "Vertikal"
 
@@ -270,7 +276,8 @@ msgstr "Di kedua sisi"
 msgid "Select Monitor"
 msgstr "Pilih Monitor"
 
-#: ../panel/panel-dialogs.c:1401 ../plugins/clock/clock-dialog.c:500
+#: ../panel/panel-dialogs.c:1401
+#: ../plugins/clock/clock-dialog.c:500
 #: ../plugins/systray/xfce-tray-dialogs.c:350
 #: ../plugins/tasklist/tasklist-dialogs.c:166
 #: ../plugins/windowlist/windowlist-dialog.c:187
@@ -278,21 +285,19 @@ msgid "Appearance"
 msgstr "Tampilan"
 
 #: ../panel/panel-dialogs.c:1414
-#, fuzzy
 msgid "_Size (pixels):"
-msgstr "Ukuran (piksel):"
+msgstr "_Ukuran (piksel):"
 
 #: ../panel/panel-dialogs.c:1445
-#, fuzzy
 msgid "_Transparency (%):"
-msgstr "Transparansi (%):"
+msgstr "_Transparansi (%):"
 
 #: ../panel/panel-dialogs.c:1471
-#, fuzzy
 msgid "Make active panel _opaque"
-msgstr "Buat panel aktif opaque"
+msgstr "Buat panel aktif _opaque"
 
-#: ../panel/panel-dialogs.c:1514 ../panel/panel-dialogs.c:1550
+#: ../panel/panel-dialogs.c:1514
+#: ../panel/panel-dialogs.c:1550
 #: ../panel/panel-dialogs.c:1574
 #, c-format
 msgid "Panel %d"
@@ -301,13 +306,12 @@ msgstr "Panel %d"
 #. TRANSLATORS: Tooltip for the add button in the customize panel dialog
 #: ../panel/panel-dialogs.c:1594
 msgid "Remove the currently selected panel"
-msgstr ""
+msgstr "Hapus panel terpilih saat ini"
 
 #. TRANSLATORS: Tooltip for the add button in the customize panel dialog
 #: ../panel/panel-dialogs.c:1608
-#, fuzzy
 msgid "Add a new panel"
-msgstr "Tambah item baru"
+msgstr "Tambah panel baru"
 
 #: ../panel/panel-dialogs.c:1668
 #: ../settings/xfce4-panel-manager.desktop.in.h:2
@@ -316,11 +320,11 @@ msgstr "Panel"
 
 #: ../panel/panel-dialogs.c:1675
 #: ../settings/xfce4-panel-manager.desktop.in.h:1
-#, fuzzy
 msgid "Customize the panel settings"
-msgstr "Kustomisasi Panel"
+msgstr "Kustomisasi pengaturan panel"
 
-#: ../plugins/actions/actions.c:265 ../plugins/actions/actions.c:301
+#: ../plugins/actions/actions.c:265
+#: ../plugins/actions/actions.c:301
 #: ../plugins/actions/actions.c:456
 msgid "Lock screen"
 msgstr "Kunci layar"
@@ -331,18 +335,16 @@ msgid "Action Buttons"
 msgstr "Tombol Aksi"
 
 #: ../plugins/actions/actions.c:445
-#, fuzzy
 msgid "_Select action type:"
-msgstr "Pilih tipe aksi:"
+msgstr "P_ilih tipe aksi:"
 
 #: ../plugins/actions/actions.c:457
 msgid "Quit + Lock screen"
 msgstr "Keluar + Kunci layar"
 
 #: ../plugins/actions/actions.c:468
-#, fuzzy
 msgid "_Orientation:"
-msgstr "Orientasi:"
+msgstr "_Orientasi:"
 
 #: ../plugins/clock/clock-dialog.c:357
 msgid "Custom"
@@ -410,22 +412,21 @@ msgid "Icon Box"
 msgstr "Kotak Ikon"
 
 #: ../plugins/iconbox/iconbox.c:929
-#, fuzzy
 msgid "Only show _minimized applications"
-msgstr "Hanya tampilkan aplikasi diminimalkan"
+msgstr "Hanya tampilkan aplikasi _diminimalkan"
 
 #: ../plugins/iconbox/iconbox.c:938
-#, fuzzy
 msgid "Show applications of _all workspaces"
-msgstr "Tampilkan aplikasi di semua ruang kerja"
+msgstr "Tampilkan _aplikasi di semua ruang kerja"
 
-#: ../plugins/iconbox/iconbox.c:946 ../plugins/tasklist/tasklist-dialogs.c:186
-#, fuzzy
+#: ../plugins/iconbox/iconbox.c:946
+#: ../plugins/tasklist/tasklist-dialogs.c:186
 msgid "Use all available _space"
-msgstr "Gunakan semua ruang tersedia"
+msgstr "Gunakan _semua ruang tersedia"
 
 #. TRANSLATORS: Name of a newly created launcher
-#: ../plugins/launcher/launcher.c:705 ../plugins/launcher/launcher.c:770
+#: ../plugins/launcher/launcher.c:705
+#: ../plugins/launcher/launcher.c:770
 msgid "New Item"
 msgstr "Item Baru"
 
@@ -479,34 +480,28 @@ msgid "Select an Icon for \"%s\""
 msgstr "Pilih Ikon untuk \"%s\""
 
 #: ../plugins/launcher/launcher-dialog.c:1122
-#, fuzzy
 msgid "_Name:"
-msgstr "_Nama"
+msgstr "_Nama:"
 
 #: ../plugins/launcher/launcher-dialog.c:1140
-#, fuzzy
 msgid "_Description:"
-msgstr "_Deskripsi"
+msgstr "_Deskripsi:"
 
 #: ../plugins/launcher/launcher-dialog.c:1159
-#, fuzzy
 msgid "_Icon:"
-msgstr "_Ikon"
+msgstr "_Ikon:"
 
 #: ../plugins/launcher/launcher-dialog.c:1177
-#, fuzzy
 msgid "Co_mmand:"
-msgstr "Perin_tah"
+msgstr "Perin_tah:"
 
 #: ../plugins/launcher/launcher-dialog.c:1204
-#, fuzzy
 msgid "_Working Directory:"
-msgstr "_Direktori Kerja"
+msgstr "_Direktori Kerja:"
 
 #: ../plugins/launcher/launcher-dialog.c:1210
-#, fuzzy
 msgid "Select a Working Directory"
-msgstr "Pilih Direktori"
+msgstr "Pilih Direktori Kerja"
 
 #: ../plugins/launcher/launcher-dialog.c:1231
 msgid "Run in _terminal"
@@ -535,30 +530,26 @@ msgstr "Standar"
 msgid "Inside Button"
 msgstr "Dalam Tombol"
 
-#: ../plugins/pager/pager.c:368 ../plugins/pager/pager.desktop.in.in.h:2
-#, fuzzy
+#: ../plugins/pager/pager.c:368
+#: ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Workspace Switcher"
-msgstr "Ruang kerja %d"
+msgstr "Penukar Ruang kerja"
 
 #: ../plugins/pager/pager.c:397
-#, fuzzy
 msgid "Number _of rows:"
-msgstr "Jumlah baris:"
+msgstr "Jumlah _baris:"
 
 #: ../plugins/pager/pager.c:401
-#, fuzzy
 msgid "Number _of columns:"
-msgstr "Jumlah kolom:"
+msgstr "Jumlah _kolom:"
 
 #: ../plugins/pager/pager.c:418
-#, fuzzy
 msgid "Switch workspaces using the mouse _wheel"
-msgstr "Pindah ruang kerja menggunakan roda tetikus"
+msgstr "Pindah ruang kerja menggunakan roda tetik_us"
 
 #: ../plugins/pager/pager.c:426
-#, fuzzy
 msgid "Show workspace _names"
-msgstr "Tampilkan nama ruang kerja"
+msgstr "Tampilkan nama ruan_g kerja"
 
 #: ../plugins/separator/separator.c:409
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -570,14 +561,12 @@ msgid "Separator Style"
 msgstr "Gaya Pemisah"
 
 #: ../plugins/separator/separator.c:436
-#, fuzzy
 msgid "_Empty space"
-msgstr "_Ruang Kosong"
+msgstr "_Ruang kosong"
 
 #: ../plugins/separator/separator.c:445
-#, fuzzy
 msgid "E_xpanding empty space"
-msgstr "_Perluas Ruang Kosong"
+msgstr "_Perluas ruang kosong"
 
 #: ../plugins/separator/separator.c:454
 msgid "_Line"
@@ -602,16 +591,14 @@ msgstr "Sembunyikan jendela dan tampilkan destop"
 #: ../plugins/systray/xfce-tray-plugin.c:70
 #: ../plugins/systray/xfce-tray-dialogs.c:333
 #: ../plugins/systray/systray.desktop.in.in.h:2
-#, fuzzy
 msgid "Notification Area"
-msgstr "Pemberitahuan Penting"
+msgstr "Area Pemberitahuan"
 
 #. TRANSLATORS: This message is shown in an info dialog when the users
 #. add a notification area to a screen with a running systray manager.
 #: ../plugins/systray/xfce-tray-plugin.c:98
-#, fuzzy
 msgid "There is already a notification area running on this screen"
-msgstr "Telah ada baki sistem yang berjalan di layar ini"
+msgstr "Telah ada baki area notifikasi yang berjalan di layar ini"
 
 #. TRANSLATORS: Bit of a weird text, but this is shown when for some
 #. reason another tray takes the ownership of the tray icons and this
@@ -646,19 +633,16 @@ msgid "Task List"
 msgstr "Senarai Tugas"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:172
-#, fuzzy
 msgid "_Minimum width:"
-msgstr "Lebar Minimum:"
+msgstr "_Lebar minimum:"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:193
-#, fuzzy
 msgid "Use _flat buttons"
-msgstr "Gunakan tombol rata"
+msgstr "Gunakan _tombol rata"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:199
-#, fuzzy
 msgid "Show _handle"
-msgstr "Tampilkan penanganan"
+msgstr "Tampilkan _penanganan"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:211
 msgid "Show tasks from _all workspaces"
@@ -714,12 +698,8 @@ msgid "Window List"
 msgstr "Senarai Jendela"
 
 #: ../plugins/windowlist/windowlist-dialog.c:148
-msgid ""
-"<i>Urgency notification</i> will blink the button when an application needs "
-"attention."
-msgstr ""
-"<i>Pemberitahuan Penting</i> akan mengedipkan tombol ketika sebuah aplikasi "
-"membutuhkan perhatian."
+msgid "<i>Urgency notification</i> will blink the button when an application needs attention."
+msgstr "<i>Pemberitahuan Penting</i> akan mengedipkan tombol ketika sebuah aplikasi membutuhkan perhatian."
 
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:155
@@ -775,35 +755,32 @@ msgid "Program launcher with optional menu"
 msgstr "Peluncur program dengan menu opsional"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
-#, fuzzy
 msgid "Switch between virtual desktops"
-msgstr "Tampilan miniatur dari semua destop virtual"
+msgstr "Tukar diantara destop virtual"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
 msgstr "Tambah spasi atau baris diantara item panel"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
-#, fuzzy
 msgid "Hide all windows and show the desktop"
-msgstr "Sembunyikan jendela dan tampilkan destop"
+msgstr "Sembunyikan semua jendela dan tampilkan destop"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Show Desktop"
 msgstr "Tampilkan Destop"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Area where notification icons appear"
-msgstr "Tampilkan ikon pemberitahuan"
+msgstr "Area tempat ikon notifikasi muncul"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Switch between open windows using buttons"
-msgstr ""
+msgstr "Tukar diantara jendela yang terbuka dengan menggunakan tombol"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Switch between open windows using a menu"
-msgstr ""
+msgstr "Tukar diantara jendela yang terbuka dengan menggunakan menu"
 
 #: ../settings/xfce4-panel-manager.desktop.in.h:3
 msgid "Panel Manager"
@@ -815,90 +792,62 @@ msgstr "Manajer Panel"
 #, fuzzy
 #~ msgid "Copyright (c) 2004-2009"
 #~ msgstr "Hak Cipta (c) 2004-2007"
-
 #~ msgid "Show list of available windows"
 #~ msgstr "Tampilkan senarai jendela yang tersedia"
-
 #~ msgid "Show all running applications"
 #~ msgstr "Tampilkan semua aplikasi berjalan"
-
 #~ msgid "Popup position:"
 #~ msgstr "Posisi muncul:"
-
 #~ msgid "Automatic"
 #~ msgstr "Otomatis"
-
 #~ msgid "Toggle desktop show/hide"
 #~ msgstr "Ubah tampilkan/sembunyikan destop"
-
 #~ msgid "Show this message and exit"
 #~ msgstr "Tampilkan pesan ini dan keluar"
-
 #~ msgid "Show configuration dialog"
 #~ msgstr "Tampilkan dialog konfigurasi"
-
 #~ msgid "Restart panels"
 #~ msgstr "Start ulang panel"
-
 #~ msgid "End the session"
 #~ msgstr "Akhiri sesi"
-
 #~ msgid "Add new items"
 #~ msgstr "Tambah item baru"
-
 #~ msgid "Pager"
 #~ msgstr "Pemisah"
-
 #~ msgid "System Tray"
 #~ msgstr "Baki Sistem"
-
 #~ msgid "Command Prompt"
 #~ msgstr "Siap Ketik Perintah"
-
 #~ msgid "X terminal emulator"
 #~ msgstr "Emulator terminal X"
-
 #~ msgid "Edit text files"
 #~ msgstr "Sunting berkas teks"
-
 #~ msgid "Editor"
 #~ msgstr "Penyunting"
-
 #~ msgid "File Manager"
 #~ msgstr "Manajer Berkas"
-
 #~ msgid "Manage files and folders"
 #~ msgstr "Atur berkas dan folder"
-
 #~ msgid "Surf the internet"
 #~ msgstr "Jelajahi internet"
-
 #~ msgid "Web Browser"
 #~ msgstr "Peramban Web"
-
 #~ msgid "Add Items"
 #~ msgstr "Tambah Item"
-
 #~ msgid "Add Items to the Panel"
 #~ msgstr "Tambah Item ke Panel"
-
 #~ msgid "Available Items"
 #~ msgstr "Item Tersedia"
-
 #~ msgid "Remove Panel"
 #~ msgstr "Hapus Panel"
-
 #~ msgid "New Panel"
 #~ msgstr "Panel Baru"
-
 #~ msgid "Panel Actions"
 #~ msgstr "Aksi Panel"
-
 #~ msgid "Program Launcher"
 #~ msgstr "Peluncur Program"
-
 #~ msgid "Failed to launch 'xfce4-panel -c'"
 #~ msgstr "Gagal menjalankan 'xfce4-panel -c'"
-
 #~ msgid "Xfce 4 Panel Manager"
 #~ msgstr "Manajer Panel Xfce 4"
+
