update french translation
(Old svn revision: 29481)

--- a/po/fr.po
+++ b/po/fr.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: xfce4-panel\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-25 23:16+0100\n"
-"PO-Revision-Date: 2009-01-23 23:18+0100\n"
-"Last-Translator: Maximilian Schleiss <maximilian@xfce.org>\n"
+"PO-Revision-Date: 2009-01-29 18:34+0100\n"
+"Last-Translator: Mike Massonnet <mmassonnet@gmail.com>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -276,7 +276,7 @@ msgstr "_Taille (pixels) :"
 
 #: ../panel/panel-dialogs.c:1445
 msgid "_Transparency (%):"
-msgstr "_Transparence (%) :"
+msgstr "T_ransparence (%) :"
 
 #: ../panel/panel-dialogs.c:1471
 msgid "Make active panel _opaque"
