--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-11  Mike Massonnet <mmassonnet@xfce.org>
+
+	* fr.po: Change mnemonic
+
 2009-02-07  Maximilian Schleiss <maximilian@xfce.org>
 
 	* id.po: Indonesian translation update (Andhika Padmawan)
