Turkish translation update by Turkish translation team.
(Old svn revision: 29482)

--- a/po/tr.po
+++ b/po/tr.po
@@ -5,12 +5,13 @@
 #
 # Erçin EKER <ercin.eker@linux.org.tr>, 2004.
 # Eren Türkay <turkay.eren@gmail.com>, 2007, 2008.
+# Gökmen görgen <gkmngrgn@gmail.com>, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: tr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-25 23:16+0100\n"
-"PO-Revision-Date: 2009-01-30 19:51+0200\n"
+"PO-Revision-Date: 2009-02-11 04:47+0200\n"
 "Last-Translator: Gökmen Görgen <gkmngrgn@gmail.com>\n"
 "Language-Team: Turkish <turkce@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
@@ -508,7 +509,7 @@ msgstr "Çalışma Dizinini Seç"
 
 #: ../plugins/launcher/launcher-dialog.c:1231
 msgid "Run in _terminal"
-msgstr "_Terminalde çalıştır"
+msgstr "_Uçbirimde çalıştır"
 
 #: ../plugins/launcher/launcher-dialog.c:1247
 msgid "Use _startup notification"
