--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-11  Eren Türkay <erenturkay@xfce.org>
+
+    * tr.po: Turkish translation update
+
 2009-02-11  Mike Massonnet <mmassonnet@xfce.org>
 
 	* fr.po: Change mnemonic
