Translations Updates - ca es gl id it pt_PT zh_CN
(Old svn revision: 29526)

--- a/po/it.po
+++ b/po/it.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the xfce4-panel package.
 # Alex Dupre <ale@FreeBSD.org>, 2004.
 # Luca Marrocco <buildup@libero.it>, 2005.
-# Fabio Riga <usul@arubas.it>, 2007.
+# Fabio Riga <usul@aruba.it>, 2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-03-27 15:28+0200\n"
-"PO-Revision-Date: 2007-05-03 10:29+0200\n"
+"PO-Revision-Date: 2009-01-21 00:20+0100\n"
 "Last-Translator: Fabio Riga <usul@aruba.it>\n"
 "Language-Team: Italian <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
