--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-20  Maximilian Schleiss <maximilian@xfce.org>
+
+	* it.po: Italian translation udpate (Fabio Riga)
+
 2008-10-20 Lars Nielsen <lars@mit-web.dk>
 
 	* da.po,LINGUAS: Added danish translation
