--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2009-02-20  Maximilian Schleiss <maximilian@xfce.org>
+
+	* gl.po: Galician translation update (Leandro Regueiro)
+
 2009-02-11  Eren Türkay <erenturkay@xfce.org>
 
-    * tr.po: Turkish translation update
+	* tr.po: Turkish translation update
 
 2009-02-11  Mike Massonnet <mmassonnet@xfce.org>
 
