--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-22  Mike Massonnet <mmassonnet@xfce.org>
+
+	* ja.po: Update Japanese translation (Masato Hashimoto)
+
 2009-02-21  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Greek translation update ()
