--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,10 +1,15 @@
+2009-03-01  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po: Spanish translation update (Abel Martín)
+	* pl.po: Polish translation update (Piotr Sokół)
+
 2009-02-22  Mike Massonnet <mmassonnet@xfce.org>
 
 	* ja.po: Update Japanese translation (Masato Hashimoto)
 
 2009-02-21  Stavros Giannouris <stavrosg@hellug.gr>
 
-	* el.po: Greek translation update ()
+	* el.po: Greek translation update
 
 2009-02-20  Maximilian Schleiss <maximilian@xfce.org>
 
