--- a/po/es.po
+++ b/po/es.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the xfce4-panel package.
 # Edscott Wilson García <edscott@xfce.org>, 2003-2004.
 # Rudy Godoy <rudy@stone-head.org>, 2005, 2006.
-# Abel Martín <abel.martin.ruiz@gmail.com>, 2008.
+# Abel Martín <abel.martin.ruiz@gmail.com>, 2008-2009.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-25 23:16+0100\n"
-"PO-Revision-Date: 2009-01-18 12:01+0100\n"
+"PO-Revision-Date: 2009-02-24 13:39+0100\n"
 "Last-Translator: Abel Martín <abel.martin.ruiz@gmail.com>\n"
 "Language-Team: Spanish/ES <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -189,15 +189,15 @@ msgstr "Todo el ancho"
 
 #: ../panel/panel-dialogs.c:886 ../panel/panel-dialogs.c:1122
 msgid "Normal Height"
-msgstr "Altura Normal"
+msgstr "Altura normal"
 
 #: ../panel/panel-dialogs.c:887 ../panel/panel-dialogs.c:1123
 msgid "Full Height"
-msgstr "Altura Completa"
+msgstr "Altura completa"
 
 #: ../panel/panel-dialogs.c:895 ../panel/panel-dialogs.c:1132
 msgid "Span Monitors"
-msgstr "Dividir monitores"
+msgstr "Expandir monitores"
 
 #: ../panel/panel-dialogs.c:958 ../panel/panel-dialogs.c:1197
 #: ../plugins/launcher/launcher-dialog.c:1558
@@ -250,7 +250,7 @@ msgstr "Vertical"
 
 #: ../panel/panel-dialogs.c:1181
 msgid "Handle:"
-msgstr "Gestionar:"
+msgstr "Tirador:"
 
 #: ../panel/panel-dialogs.c:1193
 msgid "At both sides"
@@ -341,7 +341,7 @@ msgstr "Usar reloj de 24 _horas"
 
 #: ../plugins/clock/clock-dialog.c:426
 msgid "Fl_ash time separators"
-msgstr "Hacer _parpadear los separadores de tiempo"
+msgstr "Separadores de hora _parpadeantes"
 
 #: ../plugins/clock/clock-dialog.c:432
 msgid "Sho_w AM/PM"
@@ -380,7 +380,7 @@ msgstr "Mostrar _marco"
 #. tooltip settings
 #: ../plugins/clock/clock-dialog.c:525
 msgid "Tooltip Format"
-msgstr "Formato de consejos"
+msgstr "Formato de cuadro emergente"
 
 #. clock settings
 #: ../plugins/clock/clock-dialog.c:552
@@ -480,7 +480,7 @@ msgstr "Directorio de _trabajo:"
 
 #: ../plugins/launcher/launcher-dialog.c:1210
 msgid "Select a Working Directory"
-msgstr "Elegir un directorio de trabajo"
+msgstr "Seleccionar un directorio de trabajo"
 
 #: ../plugins/launcher/launcher-dialog.c:1231
 msgid "Run in _terminal"
@@ -662,7 +662,7 @@ msgstr "Añadir área de trabajo"
 #: ../plugins/windowlist/windowlist.c:616
 #, c-format
 msgid "Remove Workspace %d"
-msgstr "Eliminar el área de trabajo %d"
+msgstr "Eliminar área de trabajo %d"
 
 #: ../plugins/windowlist/windowlist.c:617
 #, c-format
