--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-05  Mike Massonnet <mmassonnet@xfce.org>
+
+	* pt.po: Renamed pt_PT.po to pt.po (bug #4574)
+	* nb.po: Renamed nb_NO.po to nb.po (bug #4574)
+
 2009-03-02  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pt_PT: European Portuguese translation update (Nuno Miguel)
